--- a/index.html
+++ b/index.html
@@ -1,81 +1,93 @@
-<div class="entire">
-  
-  <div class="nav">
-    <ul>
-      <li>View Music</li>
-      <li class="borderlr"><a href="#">Add Music </a></li>
-      <li><a href="#">Profile</a></li>
-    </ul>
-  </div>
-  
-  <div class="filter">
-    <label for="songlength">Song length:</label>
-    <input type="range" name="songlength" min="0" max="10">
-    <label>Artist:</label>
-    <select id="selectbox">
-      <option value="dylan">Bob Dylan</option>
-      <option value="ray">Ray LaMontagne</option>
-      <option value="bone">Bone Thug</option>
-      <option value="bach">Bach</option>
-    </select>
-    <label>Album:</label>
-    <select id="selectbox2">
-      <option value="blood">Blonde on Blonde</option>
-      <option value="ray">Hwy 61 Revisited</option>
-      <option value="bone">Nashville Skyline</option>
-      <option value="bach">Blood on the Tracks</option>
-    </select>
-    <p class="genre">Genre</li> 
-  <!--////Checkbox Section////-->
-    <table style="width:100%">
-      <tr>
-        <td><input type="checkbox" name="rock" value="rock"></td>
-        <td class="label">Rock</td> 
-        <td><input type="checkbox" name="pop" value="pop"></td>
-        <td class="label">Classical</td>
-      </tr>
-      <tr>
-        <td><input type="checkbox" name="blues" value="blues"></td>
-        <td class="label">Pop</td> 
-        <td><input type="checkbox" name="classical" value="classical"> </td>
-        <td class="label">Jazz</td>
-      </tr>
-       <tr>
-        <td><input type="checkbox" name="blues" value="blues"></td>
-        <td class="label">Blues</td> 
-        <td><input type="checkbox" name="classical" value="classical"> </td>
-        <td class="label">Hip Hop</td>
-      </tr>
-    </table> 
-    <input id="subbutton" type="submit" value="Filter">
-  </div>
+<!doctype html>
 
-  <!--Yellow Box Starts-->
-  <div class="main">
-    <h2>Song Name</h2>
-    <ul>
-      <li>Artist Name</li>
-      <li class="borderlr2">Album Name</li>
-      <li>Genre</a></li>
-    </ul>
-    <h2>Song Name</h2>
-    <ul>
-      <li>Artist Name</li>
-      <li class="borderlr2">Album Name</li>
-      <li>Genre</li>
-    </ul>
-    <h2>Song Name</h2>
-    <ul>
-      <li>Artist Name</li>
-      <li class="borderlr2">Album Name</li>
-      <li>Genre</a></li>
-    </ul>
-    <h2>Song Name</h2>
-    <ul>
-      <li>Artist Name</li>
-      <li class="borderlr2">Album Name</li>
-      <li>Genre</a></li>
-    </ul>
-  </div>  
-  <!--Yellow Box Stops-->
-</div>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Nashville Software School</title>
+</head>
+
+<body>
+  <div class="entire">
+    <nav>
+      <div class="nav">
+        <ul>
+          <li>View Music</li>
+          <li class="borderlr"><a href="#">Add Music </a></li>
+          <li><a href="#">Profile</a></li>
+        </ul>
+      </div>
+    </nav>
+    <div class="filter">
+      <label for="songlength">Song length:</label>
+      <input type="range" name="songlength" min="0" max="10">
+      <label>Artist:</label>
+      <select id="selectbox">
+        <option value="dylan">Bob Dylan</option>
+        <option value="ray">Ray LaMontagne</option>
+        <option value="bone">Bone Thug</option>
+        <option value="bach">Bach</option>
+      </select>
+      <label>Album:</label>
+      <select id="selectbox2">
+        <option value="blood">Blonde on Blonde</option>
+        <option value="ray">Hwy 61 Revisited</option>
+        <option value="bone">Nashville Skyline</option>
+        <option value="bach">Blood on the Tracks</option>
+      </select>
+      <p class="genre">Genre</li>
+      <!--Yellow Box Starts-->
+    <div class="main">
+      <h2>Song Name</h2>
+      <ul>
+        <li>Artist Name</li>
+        <li class="borderlr2">Album Name</li>
+        <li>Genre</a></li>
+      </ul>
+      <h2>Song Name</h2>
+      <ul>
+        <li>Artist Name</li>
+        <li class="borderlr2">Album Name</li>
+        <li>Genre</li>
+      </ul>
+      <h2>Song Name</h2>
+      <ul>
+        <li>Artist Name</li>
+        <li class="borderlr2">Album Name</li>
+        <li>Genre</a></li>
+      </ul>
+      <h2>Song Name</h2>
+      <ul>
+        <li>Artist Name</li>
+        <li class="borderlr2">Album Name</li>
+        <li>Genre</a></li>
+      </ul>
+    </div>  
+    <!--Yellow Box Stops-->
+    <!--////Checkbox Section////-->
+      <table style="width:100%">
+        <tr>
+          <td><input type="checkbox" name="rock" value="rock"></td>
+          <td class="label">Rock</td> 
+          <td><input type="checkbox" name="pop" value="pop"></td>
+          <td class="label">Classical</td>
+        </tr>
+        <tr>
+          <td><input type="checkbox" name="blues" value="blues"></td>
+          <td class="label">Pop</td> 
+          <td><input type="checkbox" name="classical" value="classical"> </td>
+          <td class="label">Jazz</td>
+        </tr>
+         <tr>
+          <td><input type="checkbox" name="blues" value="blues"></td>
+          <td class="label">Blues</td> 
+          <td><input type="checkbox" name="classical" value="classical"> </td>
+          <td class="label">Hip Hop</td>
+        </tr>
+      </table> 
+      <input id="subbutton" type="submit" value="Filter">
+    </div>
+    </div>  
+</body>
+</html>  
+  
+
