--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Nashville Software School</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
@@ -86,7 +87,7 @@
       </table> 
       <input id="subbutton" type="submit" value="Filter">
     </div>
-    </div>  
+  </div>  
 </body>
 </html>  
   
