fixed media quries

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-
 <html lang="en">
 <head>
   <meta charset="utf-8">
   <title>Nashville Software School</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
@@ -60,29 +60,29 @@
 
     <!--Yellow Box Starts-->
     <div class="main">
-      <h2>Song Name</h2>
+      <h2>Walk On</h2>
       <ul>
-        <li>Artist Name</li>
-        <li class="borderlr2">Album Name</li>
-        <li>Genre</a></li>
+        <li>Neil Young</li>
+        <li class="borderlr2">On the Beach</li>
+        <li>Rock</a></li>
       </ul>
-      <h2>Song Name</h2>
+      <h2>Little Wing</h2>
       <ul>
-        <li>Artist Name</li>
-        <li class="borderlr2">Album Name</li>
-        <li>Genre</li>
+        <li>Jimi Hendrix </li>
+        <li class="borderlr2">Axis: Bold as Love </li>
+        <li>Rock</li>
       </ul>
-      <h2>Song Name</h2>
+      <h2>So What?</h2>
       <ul>
-        <li>Artist Name</li>
-        <li class="borderlr2">Album Name</li>
-        <li>Genre</a></li>
+        <li>Miles Davis</li>
+        <li class="borderlr2">Kind of Blue</li>
+        <li>Jazz</a></li>
       </ul>
-      <h2>Song Name</h2>
+      <h2>Lewis and Clark</h2>
       <ul>
-        <li>Artist Name</li>
-        <li class="borderlr2">Album Name</li>
-        <li>Genre</a></li>
+        <li>Tommy Emanuel</li>
+        <li class="borderlr2">The Mystery</li>
+        <li>Instrumental</a></li>
       </ul>
     </div>  
     <!--Yellow Box Stops-->
