--- a/index.html
+++ b/index.html
@@ -1,93 +1,94 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Nashville Software School</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="style.css">
-</head>
+  <head>
+    <meta charset="utf-8">
+    <title>Nashville Software School</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="style.css">
+  </head>
 
-<body>
-  <div class="entire">
-    <div class="nav">
-      <ul>
-        <li>View Music</li>
-        <li class="borderlr"><a href="#">Add Music </a></li>
-        <li><a href="#">Profile</a></li>
-      </ul>
-    </div>
-    <div class="filter">
-      <label for="songlength">Song length:</label>
-      <input type="range" name="songlength" min="0" max="10">
-      <label>Artist:</label>
-      <select id="selectbox">
-        <option value="dylan">Bob Dylan</option>
-        <option value="ray">Ray LaMontagne</option>
-        <option value="bone">Bone Thug</option>
-        <option value="bach">Bach</option>
-      </select>
-      <label>Album:</label>
-      <select id="selectbox2">
-        <option value="blood">Blonde on Blonde</option>
-        <option value="ray">Hwy 61 Revisited</option>
-        <option value="bone">Nashville Skyline</option>
-        <option value="bach">Blood on the Tracks</option>
-      </select>
-      <p class="genre">Genre</li> 
-    <!--////Checkbox Section////-->
-      <table style="width:100%">
-        <tr>
-          <td><input type="checkbox" name="rock" value="rock"></td>
-          <td class="label">Rock</td> 
-          <td><input type="checkbox" name="pop" value="pop"></td>
-          <td class="label">Classical</td>
-        </tr>
-        <tr>
-          <td><input type="checkbox" name="blues" value="blues"></td>
-          <td class="label">Pop</td> 
-          <td><input type="checkbox" name="classical" value="classical"> </td>
-          <td class="label">Jazz</td>
-        </tr>
-         <tr>
-          <td><input type="checkbox" name="blues" value="blues"></td>
-          <td class="label">Blues</td> 
-          <td><input type="checkbox" name="classical" value="classical"> </td>
-          <td class="label">Hip Hop</td>
-        </tr>
-      </table> 
-      <input id="subbutton" type="submit" value="Filter">
-    </div>
+  <body>
+    <div class="entire">
+      <div class="nav">
+        <ul>
+          <li>View Music</li>
+          <li class="borderlr"><a href="#">Add Music </a></li>
+          <li><a href="#">Profile</a></li>
+        </ul>
+      </div>
+      <div class="filter">
+        <label for="songlength">Song length:</label>
+        <input type="range" name="songlength" min="0" max="10">
+        <label>Artist:</label>
+        <select id="selectbox">
+          <option value="dylan">Bob Dylan</option>
+          <option value="ray">Ray LaMontagne</option>
+          <option value="bone">Bone Thug</option>
+          <option value="bach">Bach</option>
+        </select>
+        <label>Album:</label>
+        <select id="selectbox2">
+          <option value="blood">Blonde on Blonde</option>
+          <option value="ray">Hwy 61 Revisited</option>
+          <option value="bone">Nashville Skyline</option>
+          <option value="bach">Blood on the Tracks</option>
+        </select>
+        <p class="genre">Genre</li> 
+      <!--////Checkbox Section////-->
+        <table style="width:100%">
+          <tr>
+            <td><input type="checkbox" name="rock" value="rock"></td>
+            <td class="label">Rock</td> 
+            <td><input type="checkbox" name="pop" value="pop"></td>
+            <td class="label">Classical</td>
+          </tr>
+          <tr>
+            <td><input type="checkbox" name="blues" value="blues"></td>
+            <td class="label">Pop</td> 
+            <td><input type="checkbox" name="classical" value="classical"> </td>
+            <td class="label">Jazz</td>
+          </tr>
+           <tr>
+            <td><input type="checkbox" name="blues" value="blues"></td>
+            <td class="label">Blues</td> 
+            <td><input type="checkbox" name="classical" value="classical"> </td>
+            <td class="label">Hip Hop</td>
+          </tr>
+        </table> 
+        <input id="subbutton" type="submit" value="Filter">
+      </div>
 
-    <!--Yellow Box Starts-->
-    <div class="main">
-      <h2>Walk On</h2>
-      <ul>
-        <li>Neil Young</li>
-        <li class="borderlr2">On the Beach</li>
-        <li>Rock</a></li>
-      </ul>
-      <h2>Little Wing</h2>
-      <ul>
-        <li>Jimi Hendrix </li>
-        <li class="borderlr2">Axis: Bold as Love </li>
-        <li>Rock</li>
-      </ul>
-      <h2>So What?</h2>
-      <ul>
-        <li>Miles Davis</li>
-        <li class="borderlr2">Kind of Blue</li>
-        <li>Jazz</a></li>
-      </ul>
-      <h2>Lewis and Clark</h2>
-      <ul>
-        <li>Tommy Emanuel</li>
-        <li class="borderlr2">The Mystery</li>
-        <li>Instrumental</a></li>
-      </ul>
+      <!--Yellow Box Starts-->
+      <div class="main">
+        <h2>Walk On</h2>
+        <ul>
+          <li>Neil Young</li>
+          <li class="borderlr2">On the Beach</li>
+          <li>Rock</a></li>
+        </ul>
+        <h2>Little Wing</h2>
+        <ul>
+          <li>Jimi Hendrix </li>
+          <li class="borderlr2">Axis: Bold as Love </li>
+          <li>Rock</li>
+        </ul>
+        <h2>So What?</h2>
+        <ul>
+          <li>Miles Davis</li>
+          <li class="borderlr2">Kind of Blue</li>
+          <li>Jazz</a></li>
+        </ul>
+        <h2>Lewis and Clark</h2>
+        <ul>
+          <li>Tommy Emanuel</li>
+          <li class="borderlr2">The Mystery</li>
+          <li>Instrumental</a></li>
+        </ul>
+      </div>  
+      <!--Yellow Box Stops-->
     </div>  
-    <!--Yellow Box Stops-->
-  </div>  
-</body>
+  </body>
 </html>  
   
+<!-- Steve's Markup https://moqups.com/chortlehoort/1E8LJX7r/ -->
 
