--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <title>Nashville Software School</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
-
   <body>
+    <!--////Nav Section////-->  
     <div class="entire">
       <div class="nav">
         <ul>
@@ -16,11 +15,13 @@
           <li><a href="#">Profile</a></li>
         </ul>
       </div>
+      <!--Nav Section Close-->  
+      <!--////Blue Box Starts////-->
       <div class="filter">
         <label for="songlength">Song length:</label>
         <input type="range" name="songlength" min="0" max="10">
         <label>Artist:</label>
-        <select id="selectbox">
+        <select id="selectbox1">
           <option value="dylan">Bob Dylan</option>
           <option value="ray">Ray LaMontagne</option>
           <option value="bone">Bone Thug</option>
@@ -34,7 +35,7 @@
           <option value="bach">Blood on the Tracks</option>
         </select>
         <p class="genre">Genre</li> 
-      <!--////Checkbox Section////-->
+        <!--////Checkbox Section////-->
         <table style="width:100%">
           <tr>
             <td><input type="checkbox" name="rock" value="rock"></td>
@@ -48,23 +49,24 @@
             <td><input type="checkbox" name="classical" value="classical"> </td>
             <td class="label">Jazz</td>
           </tr>
-           <tr>
+          <tr>
             <td><input type="checkbox" name="blues" value="blues"></td>
             <td class="label">Blues</td> 
             <td><input type="checkbox" name="classical" value="classical"> </td>
             <td class="label">Hip Hop</td>
           </tr>
         </table> 
+        <!--Checkbox Close-->
         <input id="subbutton" type="submit" value="Filter">
       </div>
-
-      <!--Yellow Box Starts-->
+      <!--Blue Box Close-->
+      <!--/////Yellow Box Starts/////-->
       <div class="main">
         <h2>Walk On</h2>
         <ul>
           <li>Neil Young</li>
           <li class="borderlr2">On the Beach</li>
-          <li>Rock</a></li>
+          <li>Rock</li>
         </ul>
         <h2>Little Wing</h2>
         <ul>
@@ -85,10 +87,9 @@
           <li>Instrumental</a></li>
         </ul>
       </div>  
-      <!--Yellow Box Stops-->
+      <!--Yellow Box Close-->
     </div>  
   </body>
 </html>  
   
-<!-- Steve's Markup https://moqups.com/chortlehoort/1E8LJX7r/ -->
-
+<!-- https://moqups.com/chortlehoort/1E8LJX7r/ -->
