added JS to page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="nav">
         <ul>
           <li>View Music</li>
-          <li class="borderlr"><a href="#">Add Music </a></li>
+          <li class="borderlr"><a href="#">Add Music</a></li>
           <li><a href="#">Profile</a></li>
         </ul>
       </div>
@@ -61,8 +61,8 @@
       </div>
       <!--Blue Box Close-->
       <!--/////Yellow Box Starts/////-->
-      <div class="main">
-        <h2>Walk On</h2>
+      <div class="main" id="song1">
+        <!-- <h2>Walk On</h2>
         <ul>
           <li>Neil Young</li>
           <li class="borderlr2">On the Beach</li>
@@ -85,10 +85,11 @@
           <li>Tommy Emanuel</li>
           <li class="borderlr2">The Mystery</li>
           <li>Instrumental</a></li>
-        </ul>
+        </ul> -->
       </div>  
       <!--Yellow Box Close-->
-    </div>  
+    </div>
+    <script src="main.js"></script>  
   </body>
 </html>  
   
