--- a/index.html
+++ b/index.html
@@ -62,10 +62,15 @@
       <!--Blue Box Close-->
       <!--/////Yellow Box Starts/////-->
       <div class="main" id="song1">
+        <section class='songinfo'>
+          
+        </section>
       </div>  
       <!--Yellow Box Close-->
     </div>
-    <script src="main.js"></script>  
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <!--script src="main.js"></script>-->  
+    <script src="main2.js"></script>  
   </body>
 </html>  
   
