added delete button

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Nashville Software School</title>
+    <title>Music History</title>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
@@ -63,8 +64,8 @@
       <!--/////Yellow Box Starts/////-->
       <div class="main" id="song1">
         <section class='songinfo'>
-          
         </section>
+        <button type="button" id="more">More Songs</button>
       </div>  
       <!--Yellow Box Close-->
     </div>
